--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -44,5 +44,10 @@
 
   "CARDS_TITLE": "Social",
 
-  "SEARCH_TITLE": "Buscar"
+  "SEARCH_TITLE": "Buscar",
+
+  "TUTORIAL_SPANISH_BUTTON": "Español",
+
+    "TUTORIAL_ARABIC_BUTTON": "العربية"
+
 }
