Added infiniti scrolling and deleted cards page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,8 @@
 {
+  "APLICATION_NAME": "WallahSahara [AR]",
+
+  "LOADING_DATA": "Loading data... [AR]",
+
   "BACK_BUTTON_TEXT": "رجوع",
   "COMMON_BUTTON_CANCEL": "CANCELAR [AR]",
 
