Added parts to register and update user

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -82,5 +82,10 @@
   "YES": "نعم",
   "NO": "لا",
 
-  "DELETE_ITEM": "حذف"
+  "DELETE_ITEM": "حذف",
+
+  "PROFILE_USER_DETAIL_COUNTER_SHOPPING": "التسوق",
+  "PROFILE_USER_DETAIL_COUNTER_SALES": "مبيعات",
+  "PROFILE_USER_DETAIL_INFORMATION_PRODUCTS": "Products [AR]",
+  "PROFILE_USER_DETAIL_INFORMATION_FAVOURITES": "Favourites [AR]"
 }
